effects/configs_builtins.cpp
@@ -26,7 +26,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 #include "dashboard/dashboard_config.h"
 #include "desktopgrid/desktopgrid_config.h"
 #include "diminactive/diminactive_config.h"
-#include "login/login_config.h"
 #include "magiclamp/magiclamp_config.h"
 #include "translucency/translucency_config.h"
 #include "presentwindows/presentwindows_config.h"
@@ -62,7 +61,6 @@ KWIN_EFFECT_CONFIG_MULTIPLE(builtins,
                             KWIN_EFFECT_CONFIG_SINGLE(dashboard, DashboardEffectConfig)
                             KWIN_EFFECT_CONFIG_SINGLE(desktopgrid, DesktopGridEffectConfig)
                             KWIN_EFFECT_CONFIG_SINGLE(diminactive, DimInactiveEffectConfig)
-                            KWIN_EFFECT_CONFIG_SINGLE(login, LoginEffectConfig)
                             KWIN_EFFECT_CONFIG_SINGLE(magiclamp, MagicLampEffectConfig)
                             KWIN_EFFECT_CONFIG_SINGLE(presentwindows, PresentWindowsEffectConfig)
                             KWIN_EFFECT_CONFIG_SINGLE(resize, ResizeEffectConfig)
